--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Window</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+
+  <main class="main-content wall">
+    <div class="rom">
+      <div class="tabaqa tabaqa-left"></div>
+      <div class="tabaqa tabaqa-right"></div>
+    </div>
+
+  </main>
+
+
+
 
   <script src="js/main.js"></script>
 </body>
